--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.1'
 services:
+
   app:
     container_name: springboot-courseword
     image: springboot-postgresql
     build: ./
     ports:
-      - "8080:8080"
+      - "7777:8080"
     environment:
       - UPLOAD_PATH=.
       - UPLOAD_PATH_WITHOUT_IMAGES=.
@@ -19,3 +20,12 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
+
+  nginx:
+    image: nginx:1.11
+    ports:
+      - "8080:80"
+    volumes:
+      - ./src/main/resources/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./src/main/resources/templates/main.html:/data/static/main.html
+
