Added saving session in redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,13 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
 
+  redis:
+    image: redis
+#    volumes:
+#      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    ports:
+      - "6379:6379"
+
   nginx:
     image: nginx:1.11
     ports:
