--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ jdbc.driver="org.postgresql.JDBC"
 spring.datasource.username = postgres
 spring.datasource.password = admin
 
+
+spring.session.store-type=redis
+spring.session.redis.namespace=spring:session
+
 # # # -------------------- Vova Terminal -------------------------
 
 
