--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.main.allow-bean-definition-overriding=true
 
-spring.datasource.url = jdbc:postgresql://postgresqldb:5432/postgres
+#spring.datasource.url = jdbc:postgresql://postgresqldb:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 jdbc.driver="org.postgresql.JDBC"
 
 #spring.datasource.initialization-mode=always
@@ -28,6 +29,9 @@ spring.datasource.password = admin
 
 spring.session.store-type=redis
 spring.session.redis.namespace=spring:session
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # # # -------------------- Vova Terminal -------------------------
 
