--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.main.allow-bean-definition-overriding=true
 
-#spring.datasource.url = jdbc:postgresql://postgresqldb:5432/postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://postgresqldb:5432/postgres
+#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 jdbc.driver="org.postgresql.JDBC"
 
 #spring.datasource.initialization-mode=always
