--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,11 @@ services:
     ports:
       - "6379:6379"
 
-  nginx:
-    image: nginx:1.11
-    ports:
-      - "8080:80"
-    volumes:
-      - ./src/main/resources/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./src/main/resources/templates/main.html:/data/static/main.html
+#  nginx:
+#    image: nginx:1.11
+#    ports:
+#      - "8080:80"
+#    volumes:
+#      - ./src/main/resources/nginx.conf:/etc/nginx/conf.d/default.conf
+#      - ./src/main/resources/templates/main.html:/data/static/main.html
 
