--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,25 @@
             <version>2.5.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.4.2-0</version>
+        </dependency>
+
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.bytedeco.javacpp-presets/opencv &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco.javacpp-presets</groupId>-->
+<!--            <artifactId>opencv</artifactId>-->
+<!--            <version>4.0.1-1.4.4</version>-->
+<!--        </dependency>-->
 
 
     </dependencies>
