--- a/src/main/resources/nginx.conf
+++ b/src/main/resources/nginx.conf
@@ -5,7 +5,7 @@ server {
     }
 
     location @spring {
-        proxy_pass http://app:8080;
+        proxy_pass http://localhost:8080;
     }
 
 }
