--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=7777
+server.port=8080
 
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
@@ -19,8 +19,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.url = jdbc:postgresql://postgresqldb:5432/postgres
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.redis.address = localhost
 jdbc.driver="org.postgresql.JDBC"
-
 #spring.datasource.initialization-mode=always
 
 spring.datasource.username = postgres
