--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - "7777:8080"
     environment:
-      - UPLOAD_PATH=.
-      - UPLOAD_PATH_WITHOUT_IMAGES=.
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgresqldb:5432/postgres
+      - SPRING_REDIS_ADDRESS=redis
     depends_on:
       - postgresqldb
 
